Bug 163792 - Keyboard focus stuck in font-size selector (gtk3-only)
Summary: Keyboard focus stuck in font-size selector (gtk3-only)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.2.0 target:24.8.4
Keywords: bibisected, bisected, regression
: 163451 163481 (view as bug list)
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2024-11-06 23:56 UTC by Jim Avera
Modified: 2024-11-29 18:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Demo doc for the cursor-stuck-in-fontsize-selector bug (17.60 KB, application/vnd.oasis.opendocument.text)
2024-11-06 23:57 UTC, Jim Avera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Avera 2024-11-06 23:56:57 UTC
Description:
If the font size is changed with the drop-down menu, the keyboard focus stays stuck in the font-size selector (as if you selected the displayed value and wanted to over-type it).  If you click in the document where you were, the font size changes back to whatever font was the default at that position.

So there is no way to change font size in the middle of a paragraph.

STEPS TO REPRODUCE:
(see attached demo document)

1.   Type something in 18pt font
2.   Place the cursor somewhere within that 18pt text
3.   Click the font-size dropdown and change to 10pt

RESULTS: The cursor stays in the font selector.

If you put the cursor back where you wanted to type 10pt text, the font size goes back to 18pt.

REGRESSION since 24.2.6.2 (or later)

Steps to Reproduce:
.

Actual Results:
.

Expected Results:
.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 315180b2a3977aadb0de3ff6d20774e87eaf9ffd
CPU threads: 12; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Jim Avera 2024-11-06 23:57:52 UTC
Created attachment 197464 [details]
Demo doc for the cursor-stuck-in-fontsize-selector bug
Comment 2 raal 2024-11-11 23:25:44 UTC
Confirm with Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 182140d53ac767f5f31aefb2f00ac1f812245703
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 raal 2024-11-12 18:09:03 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.8.
Adding Cc: to Michael Weghorn ; Could you possibly take a look at this one?
Thanks
 9a919bb9ffdc37b7900384a3233620a58ce0be7a is the first bad commit
commit 9a919bb9ffdc37b7900384a3233620a58ce0be7a
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Wed May 29 09:58:41 2024 +0200

    source 405cf00e4818886b0d3053d03cfb2e3f3a5e8eb8

168146: related tdf#160971 gtk3 a11y: Keep new combobox value | https://gerrit.libreoffice.org/c/core/+/168146
Comment 4 Buovjaga 2024-11-14 07:14:52 UTC
*** Bug 163451 has been marked as a duplicate of this bug. ***
Comment 5 Buovjaga 2024-11-16 19:24:00 UTC
*** Bug 163481 has been marked as a duplicate of this bug. ***
Comment 6 Michael Weghorn 2024-11-18 12:28:41 UTC
Potential fix: https://gerrit.libreoffice.org/c/core/+/176713
Comment 7 Commit Notification 2024-11-18 17:43:23 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4e770803c63417791cf2e38e27ec85127056b7a5

tdf#163792 gtk3: Don't always focus combobox when its popup closes

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Weghorn 2024-11-18 17:45:25 UTC
(In reply to Michael Weghorn from comment #6)
> Potential fix: https://gerrit.libreoffice.org/c/core/+/176713

Merged for master now. Pending backport for 24-8:
https://gerrit.libreoffice.org/c/core/+/176730
Comment 9 Commit Notification 2024-11-28 20:57:36 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/8f08c9ac2805488ab60e32cc641d72aac1cbf3ce

tdf#163792 gtk3: Don't always focus combobox when its popup closes

It will be available in 24.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Jim Avera 2024-11-29 16:48:33 UTC
Confirming fixed in git branch 'master'
Thanks!

Version: 25.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 70d054a3da47362adf81442c399bc5bd3cfe43c3
CPU threads: 12; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded